# parallel_tasks

./: .gitignore  CMakeLists.txt  Makefile  README  batch_script.csh  hello.py  job_info.c  job_info.h  master_task.h  nanosec_sleep.c  nanosec_sleep.h  parallel_tasks.c  parallel_tasks_collective.c  worker_task.c
src/: CMakeLists.txt  command_file.c  command_file.h  get_time.c  get_time.h  identify_format.c  identify_format.h  job_info.c  job_info.h  main.c  master_task.c  run_job.c  run_job.h  runner.c  runner.h  terminate.c  terminate.h  testprog.c  worker_task.h
